# hsh

./: .gitignore  LICENSE  README.md  hsh.cabal  stack.yaml
app/: Main.hs
src/: ANSIColourLib.hs  HSHAnsiColourLib.hs  HSHLib.hs  HSHOwaspLib.hs
